src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-168.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units v=g incv=2m\")"
---
items:
  - loc: "#units v=g incv=2m"
    locs:
      directive: "#units"
    options:
      - loc: v=g
        locs:
          option: v
          unit: g
        option: FrontsightInclinationUnit
        unit: Grads
      - correction:
          unit: Mils
          value: 2
        loc: incv=2m
        locs:
          correction: 2m
          option: incv
        option: FrontsightInclinationCorrection
    type: UnitsDirective
