src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-17.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=une\")"
---
items:
  - loc: "#units order=une"
    locs:
      directive: "#units"
    options:
      - loc: order=une
        locs:
          option: order
          order: une
        option: RectilinearOrder
        order:
          - Elevation
          - Northing
          - Easting
    type: UnitsDirective
