src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-172.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incvb"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: incvb
              option: BacksightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
