src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-178.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=-2q\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incvb=-2q"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "-2q"
              loc: incvb=-2q
              locs:
                correction: "-2q"
                option: incvb
              option: BacksightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDINCLINATIONUNIT
    loc: q
    message: Invalid inclination unit
    severity: Error
